[metadata]
name = tk_toolkit
version = 1.0.3
description = Toolkit for tkinter
long_description = file: README.md
long_description_content_type = text/markdown
author = Jonathan Woolf & Matthew Kayne
author_email = jonathan.woolf.01@gmail.com
url = https://github.com/Jonathan-0101/tk-toolkit

[options]
packages = find:
include_package_data = True
